feat: add game logic

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button>Let's play!</button>
         </div>
 
-        <div class="match">
+        <div class="match fadeOut">
             <h2 class="winner">Choose an option</h2>
             <div class="hands">
                 <img class="playerHand" src="./img/rock.png" alt="image of hand with rock sign">
